kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dify-ingress
  namespace: dify
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8008
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8008
          - path: /console/api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8008
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8008
